# iot_queue

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_arm.sh  main.c
include/: iot_queue.h  iot_queue_partition.h
src/: iot_queue.c  iot_queue_partition.c
test/: CMakeLists.txt  basic_append_read.c  utils.h
tools/iot_queued/: CMakeLists.txt
tools/iot_queued/src/: main.c
